--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "07___create-react-app",
+  "name": "StatsGrid",
   "version": "0.1.1",
   "private": true,
   "dependencies": {
@@ -8,14 +8,23 @@
     "@emotion/react": "^11.5.0",
     "@emotion/styled": "^11.3.0",
     "@mui/material": "^5.1.0",
+    "@mui/icons-material": "5.1.0",
+    "@mui/lab": "5.0.0-alpha.54",
+    "@mui/styles": "5.1.0",
     "@types/jest": "24.0.14",
     "@types/node": "12.0.8",
     "@types/react": "^17.0.34",
     "@types/react-dom": "^17.0.11",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^6.0.2",
     "react-scripts": "^4.0.3",
-    "typescript": "4.4.4"
+    "typescript": "4.4.4",
+	"chart.js": "2.9.4",
+    "clsx": "1.1.1",
+    "date-fns": "2.25.0",
+    "history": "5.0.1",
+    "nprogress": "0.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
